# SK2-Quiz

./: .gitignore  CMakeLists.txt  Opis  README.md  todo
client/: client.py
client/gui/: frameManager.py  gameRoom.py  lobby.py  login.py  quizView.py
env/: pyvenv.cfg
server/: ClientHandler.cpp  ClientHandler.h  Room.cpp  Room.h  RoomHandler.cpp  RoomHandler.h  clientInfo.h  globals.cpp  globals.h  server  server.cpp  testServer
server/serverJSONs/: players.json  questions.json  rooms.json
